tests/spec/compile-fail/022_read_self_cannot_mutate.zn
// category: compile-fail
// profile: freestanding
// purpose: read-only self methods cannot mutate the receiver

module tests.fail.readSelfCannotMutate;

struct Counter {
    value: U32,
}

impl Counter {
    fn bad(self) {
        self.value = self.value + 1; // expected-error: self is read-only
    }
}
